--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home page</title>
-    
 </head>
 <body>
     <h3>Listagem de conteúdos</h3>
     <ul>
         <li><a href="/async_await_ES7">Async Await Javascript ES7</a></li>
+        <li><a href="/vuejs">Vue.JS</a></li>
     </ul>
     
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- <script type="text/javascript" src="/js/sintaxe.js"></script> -->
     <script src="/js/jqueryExamples.js"></script>
+    
 </body>
 </html>
